# math-snippets

./: .gitignore  CMakeLists.txt  conway.c  int_trapezoid.c  monte_carlo.c  vec2d.c
